<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#2AD6D6D6"
    android:orientation="vertical">
    <TextView
        android:id="@+id/textView12"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#7E776D"
        android:fontFamily="sans-serif-condensed"
        android:padding="8dp"
        android:text="@string/header1"
        android:textAlignment="center"
        android:textColor="#FFFFFF" />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="168dp"
        android:background="#FFFFFF">
        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="136dp"
            android:layout_height="136dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            app:srcCompat="@drawable/ava1" />
        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_toEndOf="@+id/imageView4"
            android:fontFamily="sans-serif-medium"
            android:text="@string/fio" />
        <TextView
            android:id="@+id/textView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView9"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:layout_toEndOf="@+id/imageView4"
            android:fontFamily="sans-serif-condensed-light"
            android:text="@string/number" />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/textView11"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:layout_toEndOf="@+id/imageView4"
            android:background="#F1F1F1"
            android:gravity="top"
            android:hint="@string/preferences"
            android:textSize="12sp" />
    </RelativeLayout>

    <TextView
        android:id="@+id/textView13"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/read_books_list" />
    <TextView
        android:id="@+id/textView14"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:text="@string/book_name1" />
    <Button
        android:id="@+id/button4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="#8BC34A"
        android:fontFamily="sans-serif-medium"
        android:text="@string/book_page_rating"
        android:textColor="#FFFFFF"
        android:textSize="12sp" />

</LinearLayout>